updaes in the file